--- a/handouts/Lab13-SearchingSorting.tex
+++ b/handouts/Lab13-SearchingSorting.tex
@@ -289,7 +289,7 @@ as the array that contains values of fields that you?re searching for.
 \subsubsection*{Instructions}
 
 \begin{enumerate}
-  \item Examine the searching code segment in the \mintinline{text}{mlb_demo.c} 
+  \item Examine the searching code segment in the \mintinline{text}{mlbDriver.c} 
 	and understand how each function is called.  
   \item Answer the questions in your worksheet regarding this code segment.
   \item Based on your observations add code to search the array for the 
