Corrected executable filename in handout

--- a/handouts/Lab13-SearchingSorting.tex
+++ b/handouts/Lab13-SearchingSorting.tex
@@ -190,7 +190,7 @@ to the total team payroll (in dollars) in increasing order.
   \item Implement the \mintinline{c}{selectionSortTeamsByPayroll} 
 	function in the \mintinline{text}{mlb.c} file as specified
   \item Compile and run your program (use make which produces an 
-	executable called \mintinline{text}{mlbDemo})
+	executable called \mintinline{text}{mlbDriver})
 \end{enumerate}
 
 \subsection{Slightly Better Sorting}
