updated links due to 404s

--- a/handouts/Lab13-SearchingSorting.tex
+++ b/handouts/Lab13-SearchingSorting.tex
@@ -19,10 +19,6 @@
   menucolor=darkred,
   urlcolor=blue,
   pdfpagemode=none,
-  pdftitle={Introduction To Git},
-  pdfauthor={Christopher M. Bourke},
-  pdfcreator={$ $Id: cv-us.tex,v 1.28 2009/01/01 00:00:00 cbourke Exp $ $},
-  pdfsubject={PhD Thesis},
   pdfkeywords={}
 }
 
@@ -80,14 +76,12 @@ Some additional resources that may help with this lab:
 \begin{itemize}
   \item Wikipedia Article on Selection Sort: \\
   	\url{http://en.wikipedia.org/wiki/Selection_sort}
-  \item A C implementation of Selection Sort: \\
-  	\url{http://www.sci.csuhayward.edu/~billard/cs3240/node29.html}
   \item Wikipedia Article on Quicksort: \\
   	\url{http://en.wikipedia.org/wiki/Quicksort}
-  \item Online manual page for qsort: \\
-  	\url{http://www.manpagez.com/man/3/qsort/}
-  \item Online manual page for bsearch: \\
-  	\url{http://www.manpagez.com/man/3/bsearch/}
+  \item Online manual page for \mintinline{c}{qsort}: \\
+  	\url{http://man7.org/linux/man-pages/man3/qsort.3.html}
+  \item Online manual page for \mintinline{c}{bsearch}: \\
+  	\url{http://man7.org/linux/man-pages/man3/bsearch.3.html}
 \end{itemize}
 
 \section*{Peer Programming Pair-Up}
