Update Handouts, Worksheet, and makefile

--- a/handouts/Lab13-SearchingSorting.tex
+++ b/handouts/Lab13-SearchingSorting.tex
@@ -57,7 +57,7 @@
 
 \title{CSCE 155 - C}
 \subtitle{Lab 13.0 - Searching \& Sorting}
-\author{Dr.\ Chris Bourke}
+\author{Cole Peterson}
 \date{~}
 
 \begin{document}
@@ -164,7 +164,7 @@ the input file and construct instances of the \mintinline{c}{Team}
 structures for you.
 
 Clone the project code for this lab from GitHub using the following 
-URL: \url{https://github.com/cbourke/CSCE155-C-Lab13}.
+URL: \url{https://github.com/clptrsn/CSCE155-C-Lab13}.
 
 \subsection{Sorting the Wrong Way}
 
@@ -301,6 +301,19 @@ as the array that contains values of fields that you?re searching for.
   \end{enumerate}
   \item Answer the questions in your worksheet and demonstrate your 
     working program to a lab instructor.
+\end{enumerate}
+
+
+
+\section{Handin/Grader Instructions}
+
+\begin{enumerate}
+  \item If you are performing the lab asynchronously, follow these instructions to hand in your code.
+  \item Hand in your \mintinline{text}{mlb.c}, \mintinline{text}{mlb.h}, and \mintinline{text}{mlbDriver.c} source file by pointing your browser to:
+  	\url{https://cse-apps.unl.edu/handin}
+	login/password.
+  \item Grade yourself by pointing your browser to
+  	\url{https://cse.unl.edu/~cse155e/grade/}
 \end{enumerate}
 
 \section{Advanced Activity (Optional)}
